    * Rename dbcreate.php in tools.php
    * Add follow function to tools.php
    * Add add source function to tools.php
    * Add add template function to tools.php
    * Add nave template initial support for itwp
    * Add album template initial support for itwp
    * Fix a bug that was reducing the possible tweet considerably due to some inconsistences between CaSeS

Version 4.0 (25/02/2012)
    * Removed all unused files
    * Create a folder in 'class' for each wiki
    * Create a folder system in 'class' that will allow a shared library
    * Remove test_tweet.php since it will no be used any longer
    * Rename build_tweet.php in tweet.php
    * Create a source class to be able to abstract from the actual source
    * Modify the database to allow multiple sources
    * Modify the database to allow multiple accounts
    * Reduce the db footprint removing redundant data from itwp_pages
    * Substitute itwp_templates with templates
    * Remove unused tables from db
    * Cleaned changelog

Version 3.1 (19/02/2012)
    * Improve bitly script output
    * Remove sub modules
    * Dbcreate now is able to work on a single template
    * Create the class for the Film template
    * Fix the #? bug on DieYear
    * Allow bitly to lock himself to prevent double bitly process
    * Force a "--send=yes" value to really send the tweet
    * Fix the crush in case of not-handled template
    * Bitly now supports UNKNOW_ERROR

Version 3.0 (10/02/2012)
    * Only page reference in the db
    * The system does pull the wiki-page content for each tweet
    * Supports 2 templates:
        * Divisione Amministrativa
        * Bio
    * Improved output for some tools
    * Automatically pulls bitly urls
    * Limit tweets lenght to 140 characters
    * Buy dyrki.it and dyrki.net
    * Rename @wikipedia_it to @itdyrki
    * Rename @wikipedia to @dyrki

Version 2.0 (never reached dropped in 10/01/2012)
    * All template data in a DB

Version 1.0 (25/12/2011)
    * Initial version