@@ -10,6 +10,7 @@ require_once( __ROOT__ . "/classes/dyrki/itwp/album.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/bio.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/divisioneamministrativa.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/film.php" );
+require_once( __ROOT__ . "/classes/dyrki/itwp/libro.php" );
 require_once( __ROOT__ . "/classes/dyrki/itwp/nave.php" );
 
 class Dyrki
